--- a/index.html
+++ b/index.html
@@ -128,10 +128,10 @@
             <img src="kotlin.png" class="icon img-fluid" alt="Kotlin" />
           </div>
           <div class="icons-div col-lg-2 col-sm-4 col-6">
-            <img src="html.png" class="icon img-fluid" alt="HTML" />
+            <img src="android.png" class="icon img-fluid" alt="Android" />
           </div>
           <div class="icons-div col-lg-2 col-sm-4 col-6">
-            <img src="css.png" class="icon img-fluid" alt="CSS" />
+            <img src="webd.png" class="icon img-fluid" alt="HTML/CSS/JS" />
           </div>
           <div class="icons-div col-lg-2 col-sm-4 col-6">
             <img src="mysql.png" class="icon img-fluid" alt="MySQL" />
