--- a/index.html
+++ b/index.html
@@ -36,7 +36,8 @@
 
     <title>My Portfolio</title>
   </head>
-  <body>
+  <body onload="aboutMe()">
+    <script type="Text/JavaScript" src="main.js"></script>
   <div class="page">
       <!-- Nav Bar -->
       <nav class="navbar navbar-expand-lg navbar-dark sticky-top">
@@ -76,9 +77,10 @@
         <h1 class="hbackground">About Me</h1>
         <div class="row background photo-background">
           <div class="col-lg-9 col-md-9 col-sm-12 about-me-div">
-            <p>
+            <p id="about-me-para">
               Hi, I am Gurbaaz Singh Gill, I am a 1st year Computer Science Engineering student hailing from Ludhiana, Punjab. Currently I am exploring the world of programming and development, trying to learn new things from my mentors and seniors. I am currently focusing on Android Application Development using kotlin and working on small projects to improve my skills. To sum it up, I am beginner full of enthusiasm and a long way to go!!!
-          </div>
+            </p>
+            </div>
           <div class="col-lg-3 col-md-3 col-sm-12 my_photo_div">
             <img
               src="Gurbaaz.jpg"
