--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     />
 
     <!-- Icon -->
-    <link rel="icon" href="webicon.png" />
+    <link rel="icon" href="Resources/webicon.png" />
 
     <!-- Bootstrap CSS -->
     <link
@@ -83,7 +83,7 @@
             </div>
           <div class="col-lg-3 col-md-3 col-sm-12 my_photo_div">
             <img
-              src="Gurbaaz.jpg"
+              src="Resources/Gurbaaz.jpg"
               alt="Gurbaaz Singh Gill"
               class="img-fluid my_photo rounded mx-auto"
             />
@@ -121,22 +121,22 @@
         </p>
         <div class="row photo-background background">
           <div class="icons-div col-lg-2 col-sm-4 col-6">
-            <img src="c.png" class="icon img-fluid" alt="C" />
+            <img src="Resources/c.png" class="icon img-fluid" alt="C" />
           </div>
           <div class="icons-div col-lg-2 col-sm-4 col-6">
-            <img src="cpp.png" class="icon img-fluid" alt="C++" />
+            <img src="Resources/cpp.png" class="icon img-fluid" alt="C++" />
           </div>
           <div class="icons-div col-lg-2 col-sm-4 col-6">
-            <img src="kotlin.png" class="icon img-fluid" alt="Kotlin" />
+            <img src="Resources/kotlin.png" class="icon img-fluid" alt="Kotlin" />
           </div>
           <div class="icons-div col-lg-2 col-sm-4 col-6">
-            <img src="android.png" class="icon img-fluid" alt="Android" />
+            <img src="Resources/android.png" class="icon img-fluid" alt="Android" />
           </div>
           <div class="icons-div col-lg-2 col-sm-4 col-6">
-            <img src="webd.png" class="icon img-fluid" alt="HTML/CSS/JS" />
+            <img src="Resources/webd.png" class="icon img-fluid" alt="HTML/CSS/JS" />
           </div>
           <div class="icons-div col-lg-2 col-sm-4 col-6">
-            <img src="mysql.png" class="icon img-fluid" alt="MySQL" />
+            <img src="Resources/mysql.png" class="icon img-fluid" alt="MySQL" />
           </div>
         </div>
       </section>
