--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
         <div class="row background photo-background">
           <div class="col-lg-9 col-md-9 col-sm-12 about-me-div">
             <p id="about-me-para">
-              Hi, I am Gurbaaz Singh Gill, I am a 1st year Computer Science Engineering student hailing from Ludhiana, Punjab. Currently I am exploring the world of programming and development, trying to learn new things from my mentors and seniors. I am currently focusing on Android Application Development using kotlin and working on small projects to improve my skills. To sum it up, I am beginner full of enthusiasm and a long way to go!!!
+              Hi, I am Gurbaaz Singh Gill, a 1st year Computer Science Engineering student from Ludhiana, Punjab. Currently I am exploring the world of programming and development, trying to learn new things from my mentors and seniors. I am currently focusing on Android Application Development using kotlin and working on small projects to improve my skills. To sum it up, I am beginner full of enthusiasm and a long way to go!!!
             </p>
             </div>
           <div class="col-lg-3 col-md-3 col-sm-12 my_photo_div">
