--- a/portfolio.html
+++ b/portfolio.html
@@ -41,7 +41,7 @@
   <div class="page">
       <!-- Nav Bar -->
       <nav class="navbar navbar-expand-lg navbar-dark sticky-top">
-        <a class="navbar-brand" href="portfolio.html">My Portfolio</a>
+        <a class="navbar-brand" href="index.html">My Portfolio</a>
         <button
           class="navbar-toggler"
           type="button"
@@ -66,6 +66,9 @@
             </li>
             <li class="nav-item">
               <a class="nav-link" href="#contact-me">Contact me</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#confession">Confess</a>
             </li>
           </ul>
         </div>
@@ -164,6 +167,19 @@
               ><i class='fab fa-github-square'></i></a>
           </div>
         </div>
+      </section>
+      <section>
+
+        <!-- Confession -->
+
+      <section class="section confession container-fluid" id="confession">
+        <h1 class="hbackground">Want to say something anonymously ??</h1>
+        <p class="sbackground background"><a
+          class="institute"
+          href="confession.html"
+          target="_blank"
+          >Here's the link 😜</a
+        ></p>
       </section>
       <section>
         <!-- Footer-->
