--- a/confession.html
+++ b/confession.html
@@ -47,16 +47,13 @@
   </head>
   <body onload="welcome()">
     <script type="Text/JavaScript" src="main.js"></script>
-
-    <span class="heading-span"><h1 id="welcome"></h1></span>
-  </br>  </br>  </br>  </br>  </br>  </br>
-
-    <span class="section">
-        <button class="btn btn-dark btn-lg" onclick="document.location='portfolio.html'">My Portfolio</button>
+    <section class="section">
+        <span class="form-bg">
+        <iframe src="https://docs.google.com/forms/d/e/1FAIpQLScfXtegdzE3wRI1SYaCkVD5I0b39hIud8G7eIDer0sv7-sF5Q/viewform?embedded=true" width="640" height="582" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
     </span>
-    <span class="section">
-        <button class="btn btn-dark btn-lg" onclick="document.location='confession.html'">Anonymous Confession</button>
-    </span>
+    </section>
+    <section class="section"><button class="btn btn-dark btn-lg" onclick="document.location='index.html'">Back</button></section>
+
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script
