--- a/confession.html
+++ b/confession.html
@@ -48,11 +48,35 @@
   <body onload="welcome()">
     <script type="Text/JavaScript" src="main.js"></script>
     <section class="section">
-        <span class="form-bg">
-        <iframe src="https://docs.google.com/forms/d/e/1FAIpQLScfXtegdzE3wRI1SYaCkVD5I0b39hIud8G7eIDer0sv7-sF5Q/viewform?embedded=true" width="640" height="582" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
-    </span>
+      <span class="form-bg">
+        <iframe
+          src="https://docs.google.com/forms/d/e/1FAIpQLScfXtegdzE3wRI1SYaCkVD5I0b39hIud8G7eIDer0sv7-sF5Q/viewform?embedded=true"
+          width="640"
+          height="582"
+          frameborder="0"
+          marginheight="0"
+          marginwidth="0"
+          >Loading…</iframe
+        >
+      </span>
     </section>
-    <section class="section"><button class="btn btn-dark btn-lg" onclick="document.location='index.html'">Back</button></section>
+    <section class="section">
+      <button
+        class="btn btn-dark btn-lg"
+        onclick="document.location='index.html'"
+      >
+        Back
+      </button>
+    </section>
+
+    <!-- Footer-->
+    <footer class="page-footer font-small pt-5">
+      <div
+        class="footer footer-copyright text-center pb-1 pt-1 container-fluid"
+      >
+        Made By Gurbaaz Singh Gill
+      </div>
+    </footer>
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
