--- a/index.html
+++ b/index.html
@@ -57,6 +57,12 @@
     <span class="section">
         <button class="btn btn-dark btn-lg" onclick="document.location='confession.html'">Anonymous Confession</button>
     </span>
+
+    <!-- Footer-->
+<footer class="page-footer font-small pt-5">
+  <div class="footer footer-copyright text-center pb-1 pt-1 container-fluid"> Made By Gurbaaz Singh Gill
+  </div>
+</footer>
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script
