--- a/portfolio.html
+++ b/portfolio.html
@@ -174,7 +174,7 @@
 
       <section class="section confession container-fluid" id="confession">
         <h1 class="hbackground">Want to say something anonymously ??</h1>
-        <p class="sbackground background"><a
+        <p class="background"><a
           class="institute"
           href="confession.html"
           target="_blank"
