--- a/portfolio.html
+++ b/portfolio.html
@@ -173,8 +173,8 @@
         <!-- Confession -->
 
       <section class="section confession container-fluid" id="confession">
-        <h1 class="hbackground">Want to say something anonymously ??</h1>
-        <p class="background"><a
+        <h1 class="hbackground">Confess</h1>
+        <p class="background">Want to say something anonymously ?? </br><a
           class="institute"
           href="confession.html"
           target="_blank"
