--- a/confession.html
+++ b/confession.html
@@ -47,7 +47,7 @@
   </head>
   <body onload="welcome()">
     <script type="Text/JavaScript" src="main.js"></script>
-    <section class="section">
+    <section class="section " id="confssion">
       <span class="form-bg">
         <iframe
           src="https://docs.google.com/forms/d/e/1FAIpQLScfXtegdzE3wRI1SYaCkVD5I0b39hIud8G7eIDer0sv7-sF5Q/viewform?embedded=true"
