--- a/index.html
+++ b/index.html
@@ -49,7 +49,15 @@
     <script type="Text/JavaScript" src="main.js"></script>
 
     <span class="heading-span"><h1 id="welcome"></h1></span>
-  </br>  </br>  </br>  </br>  </br>  </br>
+  </br>  </br>
+  <div class="row">
+    <div class="col-lg-5 col-md-3 col-sm-3"></div>
+  <div class="col-lg-2 col-md-5 col-sm-5">
+  <img src="Resources/intro.gif" class="img-fluid" id="animated-intro" onclick="change()"/>
+  </div>
+  <div class="col-lg-5 col-md-3 col-sm-3"></div>
+</div>
+  </br>  </br>
 
     <span class="section">
         <button class="btn btn-dark btn-lg" onclick="document.location='portfolio.html'">My Portfolio</button>
@@ -57,7 +65,7 @@
     <span class="section">
         <button class="btn btn-dark btn-lg" onclick="document.location='confession.html'">Anonymous Confession</button>
     </span>
-  </br></br></br></br></br></br></br></br></br>
+  </br></br></br></br></br></br>
     <!-- Footer-->
 <footer class="page-footer font-small pt-5">
   <div class="footer footer-copyright text-center pb-1 pt-1 container-fluid"> Made By Gurbaaz Singh Gill
