confession box alignement

--- a/confession.html
+++ b/confession.html
@@ -47,8 +47,8 @@
   </head>
   <body onload="welcome()">
     <script type="Text/JavaScript" src="main.js"></script>
-    <section class="section " id="confssion">
-      <span class="form-bg">
+    <section class="section " id="confession">
+      <div class="form-bg">
         <iframe
           src="https://docs.google.com/forms/d/e/1FAIpQLScfXtegdzE3wRI1SYaCkVD5I0b39hIud8G7eIDer0sv7-sF5Q/viewform?embedded=true"
           width="640"
@@ -58,7 +58,7 @@
           marginwidth="0"
           >Loading…</iframe
         >
-      </span>
+      </div>
     </section>
     <section class="section">
       <button
