--- a/portfolio.html
+++ b/portfolio.html
@@ -105,7 +105,7 @@
           target="_blank"
           >Sacred Heart Convent School, Sarabha Nagar, Ludhiana -141001.</a
         >
-        I am currently a 1st-year student of Computer Science Engineering
+        I am currently a 2nd-year student of Computer Science Engineering
         pursuing my degree from
         <a
           class="institute"
