Some Changes - Need to Recreate the site

--- a/index.html
+++ b/index.html
@@ -61,10 +61,10 @@
 </div>
 
     <span class="section">
-        <button class="btn btn-dark btn-lg" onclick="document.location='portfolio.html'">My Portfolio</button>
+        <button class="btn btn-dark btn-lg" onclick="document.location='portfolio.html'">Portfolio</button>
     </span>
     <span class="section">
-        <button class="btn btn-dark btn-lg" onclick="document.location='confession.html'">Anonymous Confession</button>
+        <button class="btn btn-dark btn-lg" onclick="document.location='confession.html'">Anonymous Message</button>
     </span>
   </br></br></br></br></br></br>
     <!-- Footer-->
