--- a/portfolio.html
+++ b/portfolio.html
@@ -79,9 +79,9 @@
       <section class="section about-me container-fluid" id="about-me">
         <h1 class="hbackground">About Me</h1>
         <div class="row background photo-background">
-          <div class="col-lg-9 col-md-9 col-sm-12 about-me-div">
+          <div class="col-lg-9 col-md-9 col-sm-12 about-me-div paragraph">
             <p id="about-me-para">
-              Hi, I am Gurbaaz Singh Gill, a 2nd year Computer Science Engineering student from Ludhiana, Punjab. Currently I am exploring the world of programming and development, trying to learn new things from my mentors and seniors. I am currently focusing on Android Application Development using kotlin and working on small projects to improve my skills. To sum it up, I am beginner full of enthusiasm and a long way to go!!!
+              Hi, I am Gurbaaz Singh Gill, a 3rd year Computer Science Engineering student from Ludhiana, Punjab. Currently I am exploring the world of programming and development, trying to learn new things from my mentors and seniors. I have worked on various projects based on Android Application Development using kotlin and am currently experimenting with Machine Learning and Blockchain.
             </p>
             </div>
           <div class="col-lg-3 col-md-3 col-sm-12 my_photo_div">
@@ -98,6 +98,7 @@
 
       <section class="section education container-fluid" id="education">
         <h1 class="hbackground">Education</h1>
+        <div class="paragraph">
         <p class="background">I have completed my schooling (X and XII) from
         <a
           class="institute"
@@ -113,34 +114,50 @@
           target="_blank"
           >BITS Pilani, KK Birla Goa Campus</a
         >.</p>
+        </div>
       </section>
 
       <!--Skills -->
 
       <section class="section skills container-fluid" id="skills">
         <h1 class="hbackground">Skills</h1>
+        <div class="paragraph">
         <p class="background sbackground">
-          I am proficient in C and C++ and a beginner in competitive programming. I am pretty comfortable with kotlin as it is being used as a tool in exploring the world of Android Development. I have learnt HTML, CSS and Bootstrap, using which I made this portfolio page. I know a little bit about database handling using MySQL.
+          I am proficient in C, C++, Python, Java, Kotlin and JavaScript. I have some experience in native Android Development and have created a few projects for the same. I am currently exploring the field of Machine Learning and working on projects for the same.
         </p>
-        <div class="row photo-background background">
-          <div class="icons-div col-lg-2 col-sm-4 col-6">
+      </div>
+      
+        <div class="row photo-background background backgroundup">
+          <div class="icons-div col-lg-2 col-sm-6 col-6 empty-div"></div>
+          <div class="icons-div col-lg-2 col-sm-6 col-6">
             <img src="Resources/c.png" class="icon img-fluid" alt="C" />
           </div>
-          <div class="icons-div col-lg-2 col-sm-4 col-6">
+          <div class="icons-div col-lg-2 col-sm-6 col-6">
             <img src="Resources/cpp.png" class="icon img-fluid" alt="C++" />
           </div>
-          <div class="icons-div col-lg-2 col-sm-4 col-6">
+          <div class="icons-div col-lg-2 col-sm-6 col-6">
+            <img src="Resources/python.png" class="icon img-fluid" alt="Python" />
+          </div>
+          <div class="icons-div col-lg-2 col-sm-6 col-6">
+            <img src="Resources/java.png" class="icon img-fluid" alt="Java" />
+          </div>
+        </div>
+        <div class="row photo-background background">
+          <div class="icons-div col-lg-2 col-sm-6 col-6 empty-div"></div>
+          <div class="icons-div col-lg-2 col-sm-6 col-6">
             <img src="Resources/kotlin.png" class="icon img-fluid" alt="Kotlin" />
           </div>
-          <div class="icons-div col-lg-2 col-sm-4 col-6">
+          <div class="icons-div col-lg-2 col-sm-6 col-6">
             <img src="Resources/android.png" class="icon img-fluid" alt="Android" />
           </div>
-          <div class="icons-div col-lg-2 col-sm-4 col-6">
+          <div class="icons-div col-lg-2 col-sm-6 col-6">
             <img src="Resources/webd.png" class="icon img-fluid" alt="HTML/CSS/JS" />
           </div>
-          <div class="icons-div col-lg-2 col-sm-4 col-6">
-            <img src="Resources/mysql.png" class="icon img-fluid" alt="MySQL" />
-          </div>
+        <div class="icons-div col-lg-2 col-sm-6 col-6">
+          <img src="Resources/mysql.png" class="icon img-fluid" alt="MySQL" />
+        </div>
+        </div>
+        </div>
         </div>
       </section>
 
@@ -148,7 +165,9 @@
 
       <section class="section contact-me container-fluid" id="contact-me">
         <h1 class="hbackground">Contact Me</h1>
+        <div class="paragraph">
         <p class="sbackground background">You can reach out to me via any of the social media handles given below.</p>
+      </div>
        <div class="row social-div photo-background background">
             <div class="social-div col-md-1 col-lg-1 col-3">
               <a href="https://www.facebook.com/gurbaaz19/" target="_blank"
@@ -170,16 +189,18 @@
       </section>
       <section>
 
-        <!-- Confession -->
+        <!-- Anonymous Message -->
 
       <section class="section confession container-fluid" id="confession">
-        <h1 class="hbackground">Confess</h1>
+        <h1 class="hbackground">Contact Anonymously</h1>
+        <div class="paragraph">
         <p class="background">Want to say something anonymously ?? </br><a
           class="institute"
           href="confession.html"
           target="_blank"
-          >Here's the link 😜</a
+          >Here's the link</a
         ></p>
+        </div>
       </section>
       <section>
         <!-- Footer-->
