Some Changes - Need to Recreate the Website

--- a/portfolio.html
+++ b/portfolio.html
@@ -68,7 +68,7 @@
               <a class="nav-link" href="#contact-me">Contact me</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#confession">Confess</a>
+              <a class="nav-link" href="#confession">Contact Anonymously</a>
             </li>
           </ul>
         </div>
