--- a/portfolio.html
+++ b/portfolio.html
@@ -1,231 +1,235 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
+<head>
     <!-- Required meta tags -->
-    <meta charset="utf-8" />
+    <meta charset="utf-8"/>
     <meta
-      name="viewport"
-      content="width=device-width, initial-scale=1, shrink-to-fit=no"
+            name="viewport"
+            content="width=device-width, initial-scale=1, shrink-to-fit=no"
     />
 
     <!-- Icon -->
-    <link rel="icon" href="Resources/webicon.png" />
+    <link rel="icon" href="Resources/webicon.png"/>
 
     <!-- Bootstrap CSS -->
     <link
-      rel="stylesheet"
-      href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
-      integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm"
-      crossorigin="anonymous"
+            rel="stylesheet"
+            href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
+            integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm"
+            crossorigin="anonymous"
     />
 
     <!-- CSS -->
-    <link rel="stylesheet" href="portfolio.css" />
+    <link rel="stylesheet" href="portfolio.css"/>
 
     <!-- Google Fonts-->
     <link href='https://fonts.googleapis.com/css?family=Nobile' rel='stylesheet'>
     <link href='https://fonts.googleapis.com/css?family=Notable' rel='stylesheet'>
     <link href='https://fonts.googleapis.com/css?family=Paytone One' rel='stylesheet'>
-    
+
 
     <!-- Font Awesome Linking -->
     <script
-      src="https://kit.fontawesome.com/2acee2f59f.js"
-      crossorigin="anonymous"
+            src="https://kit.fontawesome.com/2acee2f59f.js"
+            crossorigin="anonymous"
     ></script>
 
     <title>My Portfolio</title>
-  </head>
-  <body onload="aboutMe()">
-    <script type="Text/JavaScript" src="portfolio.css"></script>
-  <div class="page">
-      <!-- Nav Bar -->
-      <nav class="navbar navbar-expand-lg navbar-dark sticky-top">
-        <a class="navbar-brand" href="index.html">My Portfolio</a>
-        <button
-          class="navbar-toggler"
-          type="button"
-          data-toggle="collapse"
-          data-target="#navbarSupportedContent"
-          aria-controls="navbarSupportedContent"
-          aria-expanded="false"
-          aria-label="Toggle navigation"
-        >
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarSupportedContent">
-          <ul class="navbar-nav ml-auto nav-contents">
+</head>
+<body onload="aboutMe()">
+<script type="Text/JavaScript" src="portfolio.css"></script>
+<!-- Nav Bar -->
+<nav class="navbar navbar-expand-lg navbar-dark sticky-top">
+    <a class="navbar-brand" href="index.html">My Portfolio</a>
+    <button
+            class="navbar-toggler"
+            type="button"
+            data-toggle="collapse"
+            data-target="#navbarSupportedContent"
+            aria-controls="navbarSupportedContent"
+            aria-expanded="false"
+            aria-label="Toggle navigation"
+    >
+        <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <ul class="navbar-nav ml-auto nav-contents">
             <li class="nav-item">
-              <a class="nav-link" href="#about-me">About Me</a>
+                <a class="nav-link" href="#about-me">About Me</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#education">Education</a>
+                <a class="nav-link" href="#education">Education</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#skills">Skills</a>
+                <a class="nav-link" href="#skills">Skills</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#contact-me">Contact me</a>
+                <a class="nav-link" href="#contact-me">Contact me</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#confession">Contact Anonymously</a>
+                <a class="nav-link" href="#confession">Contact Anonymously</a>
             </li>
-          </ul>
-        </div>
-      </nav>
+        </ul>
+    </div>
+</nav>
 
-      <!--About Me-->
+<!--About Me-->
 
-      <section class="section about-me container-fluid" id="about-me">
-        <h1 class="hbackground">About Me</h1>
-        <div class="row background photo-background">
-          <div class="col-lg-9 col-md-9 col-sm-12 about-me-div paragraph">
+<section class="section about-me container-fluid" id="about-me">
+    <h1 class="hbackground">About Me</h1>
+    <div class="row background photo-background">
+        <div class="col-lg-9 col-md-9 col-sm-12 about-me-div paragraph">
             <p id="about-me-para">
-              Hi, I am Gurbaaz Singh Gill, a 3rd year Computer Science Engineering student from Ludhiana, Punjab. Currently I am exploring the world of programming and development, trying to learn new things from my mentors and seniors. I have worked on various projects based on Android Application Development using kotlin and am currently experimenting with Machine Learning and Blockchain.
+                Hi, I am Gurbaaz Singh Gill, a 3rd year Computer Science Engineering student from Ludhiana, Punjab.
+                Currently I am exploring the world of programming and development, trying to learn new things from my
+                mentors and seniors. I have worked on various projects based on Android Application Development using
+                kotlin and am currently experimenting with Machine Learning and Blockchain.
             </p>
-            </div>
-          <div class="col-lg-3 col-md-3 col-sm-12 my_photo_div">
+        </div>
+        <div class="col-lg-3 col-md-3 col-sm-12 my_photo_div">
             <img
-              src="Resources/Gurbaaz.jpg"
-              alt="Gurbaaz Singh Gill"
-              class="img-fluid my_photo rounded mx-auto"
+                    src="Resources/Gurbaaz.jpg"
+                    alt="Gurbaaz Singh Gill"
+                    class="img-fluid my_photo rounded mx-auto"
             />
-          </div>
         </div>
-      </section>
+    </div>
+</section>
 
-      <!-- Education -->
+<!-- Education -->
 
-      <section class="section education container-fluid" id="education">
-        <h1 class="hbackground">Education</h1>
-        <div class="paragraph">
+<section class="section education container-fluid" id="education">
+    <h1 class="hbackground">Education</h1>
+    <div class="paragraph">
         <p class="background">I have completed my schooling (X and XII) from
-        <a
-          class="institute"
-          href="https://www.sacredheartsarabhanagar.com/"
-          target="_blank"
-          >Sacred Heart Convent School, Sarabha Nagar, Ludhiana -141001.</a
-        >
-        I am currently a 2nd-year student of Computer Science Engineering
-        pursuing my degree from
-        <a
-          class="institute"
-          href="https://www.bits-pilani.ac.in/goa/"
-          target="_blank"
-          >BITS Pilani, KK Birla Goa Campus</a
-        >.</p>
-        </div>
-      </section>
+            <a
+                    class="institute"
+                    href="https://www.sacredheartsarabhanagar.com/"
+                    target="_blank"
+            >Sacred Heart Convent School, Sarabha Nagar, Ludhiana -141001.</a
+            >
+            I am currently a 2nd-year student of Computer Science Engineering
+            pursuing my degree from
+            <a
+                    class="institute"
+                    href="https://www.bits-pilani.ac.in/goa/"
+                    target="_blank"
+            >BITS Pilani, KK Birla Goa Campus</a
+            >.</p>
+    </div>
+</section>
 
-      <!--Skills -->
+<!--Skills -->
 
-      <section class="section skills container-fluid" id="skills">
-        <h1 class="hbackground">Skills</h1>
-        <div class="paragraph">
+<section class="section skills container-fluid" id="skills">
+    <h1 class="hbackground">Skills</h1>
+    <div class="paragraph">
         <p class="background sbackground">
-          I am proficient in C, C++, Python, Java, Kotlin and JavaScript. I have some experience in native Android Development and have created a few projects for the same. I am currently exploring the field of Machine Learning and working on projects for the same.
+            I am proficient in C, C++, Python, Java, Kotlin and JavaScript. I have some experience in native Android
+            Development and have created a few projects for the same. I am currently exploring the field of Machine
+            Learning and working on projects for the same.
         </p>
-      </div>
-      
-        <div class="row photo-background background backgroundup">
-          <div class="icons-div col-lg-2 col-sm-6 col-6 empty-div"></div>
-          <div class="icons-div col-lg-2 col-sm-6 col-6">
-            <img src="Resources/c.png" class="icon img-fluid" alt="C" />
-          </div>
-          <div class="icons-div col-lg-2 col-sm-6 col-6">
-            <img src="Resources/cpp.png" class="icon img-fluid" alt="C++" />
-          </div>
-          <div class="icons-div col-lg-2 col-sm-6 col-6">
-            <img src="Resources/python.png" class="icon img-fluid" alt="Python" />
-          </div>
-          <div class="icons-div col-lg-2 col-sm-6 col-6">
-            <img src="Resources/java.png" class="icon img-fluid" alt="Java" />
-          </div>
-        </div>
-        <div class="row photo-background background">
-          <div class="icons-div col-lg-2 col-sm-6 col-6 empty-div"></div>
-          <div class="icons-div col-lg-2 col-sm-6 col-6">
-            <img src="Resources/kotlin.png" class="icon img-fluid" alt="Kotlin" />
-          </div>
-          <div class="icons-div col-lg-2 col-sm-6 col-6">
-            <img src="Resources/android.png" class="icon img-fluid" alt="Android" />
-          </div>
-          <div class="icons-div col-lg-2 col-sm-6 col-6">
-            <img src="Resources/webd.png" class="icon img-fluid" alt="HTML/CSS/JS" />
-          </div>
+    </div>
+
+    <div class="row photo-background background backgroundup">
+        <div class="icons-div col-lg-2 col-sm-6 col-6 empty-div"></div>
         <div class="icons-div col-lg-2 col-sm-6 col-6">
-          <img src="Resources/mysql.png" class="icon img-fluid" alt="MySQL" />
+            <img src="Resources/c.png" class="icon img-fluid" alt="C"/>
         </div>
+        <div class="icons-div col-lg-2 col-sm-6 col-6">
+            <img src="Resources/cpp.png" class="icon img-fluid" alt="C++"/>
         </div>
+        <div class="icons-div col-lg-2 col-sm-6 col-6">
+            <img src="Resources/python.png" class="icon img-fluid" alt="Python"/>
         </div>
+        <div class="icons-div col-lg-2 col-sm-6 col-6">
+            <img src="Resources/java.png" class="icon img-fluid" alt="Java"/>
         </div>
-      </section>
+    </div>
+    <div class="row photo-background background">
+        <div class="icons-div col-lg-2 col-sm-6 col-6 empty-div"></div>
+        <div class="icons-div col-lg-2 col-sm-6 col-6">
+            <img src="Resources/kotlin.png" class="icon img-fluid" alt="Kotlin"/>
+        </div>
+        <div class="icons-div col-lg-2 col-sm-6 col-6">
+            <img src="Resources/android.png" class="icon img-fluid" alt="Android"/>
+        </div>
+        <div class="icons-div col-lg-2 col-sm-6 col-6">
+            <img src="Resources/webd.png" class="icon img-fluid" alt="HTML/CSS/JS"/>
+        </div>
+        <div class="icons-div col-lg-2 col-sm-6 col-6">
+            <img src="Resources/mysql.png" class="icon img-fluid" alt="MySQL"/>
+        </div>
+    </div>
+    </div>
+</section>
 
-      <!-- Contact Me -->
+<!-- Contact Me -->
 
-      <section class="section contact-me container-fluid" id="contact-me">
-        <h1 class="hbackground">Contact Me</h1>
-        <div class="paragraph">
+<section class="section contact-me container-fluid" id="contact-me">
+    <h1 class="hbackground">Contact Me</h1>
+    <div class="paragraph">
         <p class="sbackground background">You can reach out to me via any of the social media handles given below.</p>
-      </div>
-       <div class="row social-div photo-background background">
-            <div class="social-div col-md-1 col-lg-1 col-3">
-              <a href="https://www.facebook.com/gurbaaz19/" target="_blank"
-              ><i class='fab fa-facebook-square'></i></a>
-          </div> 
-          <div class="social-div col-md-1 col-lg-1 col-3">
-            <a href="https://www.instagram.com/gurbaaz.gill19/" target="_blank"
-              ><i class='fab fa-instagram-square'></i></a>
-          </div> 
-          <div class="social-div col-md-1 col-lg-1 col-3">
-            <a href="https://www.linkedin.com/in/gurbaaz19/" target="_blank"
-              ><i class='fab fa-linkedin'></i></a>
-          </div>
-         <div class="social-div col-lg-1 col-md-1 col-sm-1 col-3">
-            <a href="https://github.com/gurbaaz19/" target="_blank"
-              ><i class='fab fa-github-square'></i></a>
-          </div>
+    </div>
+    <div class="row social-div photo-background background">
+        <div class="social-div col-md-1 col-lg-1 col-3">
+            <a href="https://www.facebook.com/gurbaaz19/" target="_blank"
+            ><i class='fab fa-facebook-square'></i></a>
         </div>
-      </section>
-      <section>
+        <div class="social-div col-md-1 col-lg-1 col-3">
+            <a href="https://www.instagram.com/gurbaaz.gill19/" target="_blank"
+            ><i class='fab fa-instagram-square'></i></a>
+        </div>
+        <div class="social-div col-md-1 col-lg-1 col-3">
+            <a href="https://www.linkedin.com/in/gurbaaz19/" target="_blank"
+            ><i class='fab fa-linkedin'></i></a>
+        </div>
+        <div class="social-div col-lg-1 col-md-1 col-sm-1 col-3">
+            <a href="https://github.com/gurbaaz19/" target="_blank"
+            ><i class='fab fa-github-square'></i></a>
+        </div>
+    </div>
+</section>
+<section>
 
-        <!-- Anonymous Message -->
+    <!-- Anonymous Message -->
 
-      <section class="section confession container-fluid" id="confession">
+    <section class="section confession container-fluid" id="confession">
         <h1 class="hbackground">Contact Anonymously</h1>
         <div class="paragraph">
-        <p class="background">Want to say something anonymously ?? </br><a
-          class="institute"
-          href="confession.html"
-          target="_blank"
-          >Here's the link</a
-        ></p>
+            <p class="background">Want to say something anonymously ?? </br><a
+                    class="institute"
+                    href="confession.html"
+                    target="_blank"
+            >Here's the link</a
+            ></p>
         </div>
-      </section>
-      <section>
+    </section>
+
+    <section>
         <!-- Footer-->
-<footer class="page-footer font-small pt-5">
-  <div class="footer footer-copyright text-center pb-1 pt-1 container-fluid"> Made By Gurbaaz Singh Gill
-  </div>
-</footer>
-</div>
+        <footer class="page-footer font-small pt-5">
+            <div class="footer footer-copyright text-center pb-1 pt-1 container-fluid"> Made By Gurbaaz Singh Gill</div>
+        </footer>
+    </section>
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script
-      src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
-      integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
-      crossorigin="anonymous"
+            src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
+            integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
+            crossorigin="anonymous"
     ></script>
     <script
-      src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"
-      integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
-      crossorigin="anonymous"
+            src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"
+            integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
+            crossorigin="anonymous"
     ></script>
     <script
-      src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"
-      integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
-      crossorigin="anonymous"
+            src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"
+            integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
+            crossorigin="anonymous"
     ></script>
-  </body>
+</section>
+</body>
 </html>
