--- a/portfolio.html
+++ b/portfolio.html
@@ -36,7 +36,8 @@
 
     <title>My Portfolio</title>
 </head>
-<body onload="aboutMe()">
+<!--<body onload="aboutMe()">-->
+<body>
 <script type="Text/JavaScript" src="portfolio.css"></script>
 <!-- Nav Bar -->
 <nav class="navbar navbar-expand-lg navbar-dark sticky-top">
@@ -161,7 +162,6 @@
             <img src="Resources/mysql.png" class="icon img-fluid" alt="MySQL"/>
         </div>
     </div>
-    </div>
 </section>
 
 <!-- Contact Me -->
@@ -197,12 +197,11 @@
     <section class="section confession container-fluid" id="confession">
         <h1 class="hbackground">Contact Anonymously</h1>
         <div class="paragraph">
-            <p class="background">Want to say something anonymously ?? </br><a
+            <p class="background">Want to say something anonymously ?? <br><a
                     class="institute"
                     href="confession.html"
                     target="_blank"
-            >Here's the link</a
-            ></p>
+            >Here's the link</a></p>
         </div>
     </section>
 
