--- a/confession.html
+++ b/confession.html
@@ -1,99 +1,100 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
+<head>
     <!-- Required meta tags -->
-    <meta charset="utf-8" />
+    <meta charset="utf-8"/>
     <meta
-      name="viewport"
-      content="width=device-width, initial-scale=1, shrink-to-fit=no"
+            content="width=device-width, initial-scale=1, shrink-to-fit=no"
+            name="viewport"
     />
 
     <!-- Icon -->
-    <link rel="icon" href="Resources/webicon.png" />
+    <link href="Resources/webicon.png" rel="icon"/>
 
     <!-- Bootstrap CSS -->
     <link
-      rel="stylesheet"
-      href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
-      integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm"
-      crossorigin="anonymous"
+            crossorigin="anonymous"
+            href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
+            integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm"
+            rel="stylesheet"
     />
 
     <!-- CSS -->
-    <link rel="stylesheet" href="portfolio.css" />
-    <link rel="stylesheet" href="style.css" />
+    <link href="portfolio.css" rel="stylesheet"/>
+    <link href="style.css" rel="stylesheet"/>
 
     <!-- Google Fonts-->
     <link
-      href="https://fonts.googleapis.com/css?family=Nobile"
-      rel="stylesheet"
+            href="https://fonts.googleapis.com/css?family=Nobile"
+            rel="stylesheet"
     />
     <link
-      href="https://fonts.googleapis.com/css?family=Notable"
-      rel="stylesheet"
+            href="https://fonts.googleapis.com/css?family=Notable"
+            rel="stylesheet"
     />
     <link
-      href="https://fonts.googleapis.com/css?family=Paytone One"
-      rel="stylesheet"
+            href="https://fonts.googleapis.com/css?family=Paytone One"
+            rel="stylesheet"
     />
 
     <!-- Font Awesome Linking -->
     <script
-      src="https://kit.fontawesome.com/2acee2f59f.js"
-      crossorigin="anonymous"
+            crossorigin="anonymous"
+            src="https://kit.fontawesome.com/2acee2f59f.js"
     ></script>
 
     <title>Welcome</title>
-  </head>
-  <body onload="welcome()">
-    <script type="Text/JavaScript" src="main.js"></script>
-    <section class="section " id="confession">
-      <div class="form-bg">
+</head>
+<body onload="welcome()">
+<script src="main.js" type="Text/JavaScript"></script>
+<section class="section " id="confession">
+    <div class="form-bg">
         <iframe
-          src="https://docs.google.com/forms/d/e/1FAIpQLScfXtegdzE3wRI1SYaCkVD5I0b39hIud8G7eIDer0sv7-sF5Q/viewform?embedded=true"
-          width="640"
-          height="620"
-          frameborder="0"
-          marginheight="0"
-          marginwidth="0"
-          >Loading…</iframe
+                frameborder="0"
+                height="620"
+                marginheight="0"
+                marginwidth="0"
+                src="https://docs.google.com/forms/d/e/1FAIpQLScfXtegdzE3wRI1SYaCkVD5I0b39hIud8G7eIDer0sv7-sF5Q/viewform?embedded=true"
+                width="640"
+        >Loading…
+        </iframe
         >
-      </div>
-    </section>
-    <section class="section">
-      <button
-        class="btn btn-dark btn-lg"
-        onclick="document.location='index.html'"
-      >
+    </div>
+</section>
+<section class="section">
+    <button
+            class="btn btn-dark btn-lg"
+            onclick="document.location='index.html'"
+    >
         Back
-      </button>
-    </section>
+    </button>
+</section>
 
-    <!-- Footer-->
-    <footer class="page-footer font-small pt-5">
-      <div
-        class="footer footer-copyright text-center pb-1 pt-1 container-fluid"
-      >
+<!-- Footer-->
+<footer class="page-footer font-small pt-5">
+    <div
+            class="footer footer-copyright text-center pb-1 pt-1 container-fluid"
+    >
         Made By Gurbaaz Singh Gill
-      </div>
-    </footer>
+    </div>
+</footer>
 
-    <!-- Optional JavaScript -->
-    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-    <script
-      src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
-      integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
-      crossorigin="anonymous"
-    ></script>
-    <script
-      src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"
-      integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
-      crossorigin="anonymous"
-    ></script>
-    <script
-      src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"
-      integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
-      crossorigin="anonymous"
-    ></script>
-  </body>
+<!-- Optional JavaScript -->
+<!-- jQuery first, then Popper.js, then Bootstrap JS -->
+<script
+        crossorigin="anonymous"
+        integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
+        src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
+></script>
+<script
+        crossorigin="anonymous"
+        integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
+        src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"
+></script>
+<script
+        crossorigin="anonymous"
+        integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
+        src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"
+></script>
+</body>
 </html>
