--- a/confession.html
+++ b/confession.html
@@ -9,7 +9,7 @@
     />
 
     <!-- Icon -->
-    <link href="Resources/webicon.png" rel="icon"/>
+    <link href="Resources/icon.png" rel="icon"/>
 
     <!-- Bootstrap CSS -->
     <link
