--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     />
 
     <!-- Icon -->
-    <link rel="icon" href="Resources/webicon.png" />
+    <link rel="icon" href="Resources/icon.png" />
 
     <!-- Bootstrap CSS -->
     <link
