--- a/portfolio.html
+++ b/portfolio.html
@@ -9,7 +9,7 @@
     />
 
     <!-- Icon -->
-    <link rel="icon" href="Resources/webicon.png"/>
+    <link rel="icon" href="Resources/icon.png"/>
 
     <!-- Bootstrap CSS -->
     <link
@@ -41,7 +41,7 @@
 <script type="Text/JavaScript" src="portfolio.css"></script>
 <!-- Nav Bar -->
 <nav class="navbar navbar-expand-lg navbar-dark sticky-top">
-    <a class="navbar-brand" href="index.html">My Portfolio</a>
+    <a class="navbar-brand" href="index.html"><img src="Resources/icon.png" alt="logo" id="logo"> Portfolio</a>
     <button
             class="navbar-toggler"
             type="button"
