--- a/confession.html
+++ b/confession.html
@@ -45,7 +45,7 @@
 
     <title>Welcome</title>
 </head>
-<body onload="welcome()">
+<body onload="welcome()" class="confession-body">
 <script src="main.js" type="Text/JavaScript"></script>
 <section class="section " id="confession">
     <div class="form-bg">
