--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
   <div class="row">
     <div class="col-lg-5 col-md-3 col-sm-3"></div>
   <div class="col-lg-2 col-md-5 col-sm-5">
-  <img src="Resources/intro.gif" class="img-fluid" id="animated-intro" onclick="change()"/>
+  <img src="Resources/icon.png" class="img-fluid" id="animated-intro" onclick="change()"/>
   </div>
   <div class="col-lg-5 col-md-3 col-sm-3"></div>
 </div>
